--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LutemonGame"
         tools:targetApi="31">
-        <activity
-            android:name=".listLutemonsActivity" />
+        <activity android:name=".ListLutemonsActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -22,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateNewLutemonActivity"></activity>
+        <activity android:name=".CreateNewLutemonActivity" />
     </application>
 
 </manifest>
