--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:theme="@style/Theme.LutemonGame"
         tools:targetApi="31">
         <activity
+            android:name=".Battle.BattleTabActivity1"
+            android:exported="false" />
+        <activity
             android:name=".TabActivity"
             android:exported="false" />
         <activity
-            android:name=".TrainLutemonActivity"
+            android:name=".Battle.TrainLutemonActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
