--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.LutemonGame"
         tools:targetApi="31">
         <activity
+            android:name=".Battle.BattleFightActivity"
+            android:exported="false" />
+        <activity
             android:name=".Battle.BattleTabActivity1"
             android:exported="false" />
         <activity
